{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 210,
  "lineage": "66733692-a551-2546-ee95-7abab51a56c1",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "reservas-dev-alb-logs",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:loadbalancer/app/reservas-dev-alb/06d36d57112dcb2f",
            "arn_suffix": "app/reservas-dev-alb/06d36d57112dcb2f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "reservas-dev-alb-482240776.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:249954438132:loadbalancer/app/reservas-dev-alb/06d36d57112dcb2f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "reservas-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b6b7f346aa74363e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c2bc3c619807d11"
              },
              {
                "subnet_id": "subnet-08f83f78066c4562e"
              }
            ],
            "subnets": [
              "subnet-04c2bc3c619807d11",
              "subnet-08f83f78066c4562e"
            ],
            "tags": {
              "Name": "reservas-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-alb",
              "Project": "reservas"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_s3_bucket.access_logs",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:listener/app/reservas-dev-alb/06d36d57112dcb2f/7602950db5cbdcfb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:targetgroup/reservas-dev-web-tg/8f743ea8ad992705",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:249954438132:listener/app/reservas-dev-alb/06d36d57112dcb2f/7602950db5cbdcfb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:loadbalancer/app/reservas-dev-alb/06d36d57112dcb2f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "reservas"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.web",
            "module.alb.aws_s3_bucket.access_logs",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:targetgroup/reservas-dev-api-tg/01b7807c3d0b70fb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:listener-rule/app/reservas-dev-alb/06d36d57112dcb2f/7602950db5cbdcfb/5f41fe6ccea96ba6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:249954438132:listener-rule/app/reservas-dev-alb/06d36d57112dcb2f/7602950db5cbdcfb/5f41fe6ccea96ba6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:listener/app/reservas-dev-alb/06d36d57112dcb2f/7602950db5cbdcfb",
            "priority": 100,
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "reservas"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.api",
            "module.alb.aws_lb_target_group.web",
            "module.alb.aws_s3_bucket.access_logs",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:targetgroup/reservas-dev-api-tg/01b7807c3d0b70fb",
            "arn_suffix": "targetgroup/reservas-dev-api-tg/01b7807c3d0b70fb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:249954438132:targetgroup/reservas-dev-api-tg/01b7807c3d0b70fb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "reservas-dev-api-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "reservas-dev-api-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-api-tg",
              "Project": "reservas"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:249954438132:targetgroup/reservas-dev-web-tg/8f743ea8ad992705",
            "arn_suffix": "targetgroup/reservas-dev-web-tg/8f743ea8ad992705",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:249954438132:targetgroup/reservas-dev-web-tg/8f743ea8ad992705",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "reservas-dev-web-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "reservas-dev-web-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-web-tg",
              "Project": "reservas"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:security-group/sg-0b6b7f346aa74363e",
            "description": "SG del Application Load Balancer - permite HTTPS desde internet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Hacia microservicios en subredes de app",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6b7f346aa74363e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "reservas-dev-sg-alb",
            "name_prefix": "",
            "owner_id": "249954438132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reservas-dev-sg-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-sg-alb",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:security-group/sg-0fea018a35a2e2edf",
            "description": "SG de los microservicios ECS - solo recibe trafico desde el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Salida hacia VPC (RDS, ElastiCache, VPC Endpoints)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fea018a35a2e2edf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Trafico desde el ALB hacia el frontend web",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6b7f346aa74363e"
                ],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "Trafico desde el ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6b7f346aa74363e"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "reservas-dev-sg-ecs",
            "name_prefix": "",
            "owner_id": "249954438132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reservas-dev-sg-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-sg-ecs",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:security-group/sg-0e051d44e145a24d5",
            "description": "SG de ElastiCache Redis - solo acepta conexiones desde ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Respuesta hacia ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e051d44e145a24d5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis desde microservicios ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fea018a35a2e2edf"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "reservas-dev-sg-elasticache",
            "name_prefix": "",
            "owner_id": "249954438132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reservas-dev-sg-elasticache"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-sg-elasticache",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:security-group/sg-01d62a96bc3ddbda6",
            "description": "SG de Aurora PostgreSQL - solo acepta conexiones desde ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Respuesta hacia ECS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d62a96bc3ddbda6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL desde microservicios ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fea018a35a2e2edf"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "reservas-dev-sg-rds",
            "name_prefix": "",
            "owner_id": "249954438132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reservas-dev-sg-rds"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-sg-rds",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:security-group/sg-028a129577fd4a220",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-028a129577fd4a220",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "249954438132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reservas-dev-default-sg-LOCKED"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-default-sg-LOCKED",
              "Project": "reservas"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:internet-gateway/igw-072ec6a1518df4777",
            "id": "igw-072ec6a1518df4777",
            "owner_id": "249954438132",
            "tags": {
              "Name": "reservas-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-igw",
              "Project": "reservas"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:route-table/rtb-037c1d5d2d37e606b",
            "id": "rtb-037c1d5d2d37e606b",
            "owner_id": "249954438132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "reservas-dev-rt-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-rt-app",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:route-table/rtb-06298e80a16c8853c",
            "id": "rtb-06298e80a16c8853c",
            "owner_id": "249954438132",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "reservas-dev-rt-db"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-rt-db",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:route-table/rtb-09f1f372e8dd94d92",
            "id": "rtb-09f1f372e8dd94d92",
            "owner_id": "249954438132",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072ec6a1518df4777",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "reservas-dev-rt-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-rt-public",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f90f710bef21173",
            "route_table_id": "rtb-037c1d5d2d37e606b",
            "subnet_id": "subnet-005c863812a570fae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e54dc587b620a0a6",
            "route_table_id": "rtb-037c1d5d2d37e606b",
            "subnet_id": "subnet-0755c6800a93baad4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc2f2a8a0f3c27b",
            "route_table_id": "rtb-06298e80a16c8853c",
            "subnet_id": "subnet-0c99710e920d4c6ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_db",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c11a467d7e8ca3",
            "route_table_id": "rtb-06298e80a16c8853c",
            "subnet_id": "subnet-0a29f7fabaeca505e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_db",
            "module.vpc.aws_subnet.private_db",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0216057c69dc529ec",
            "route_table_id": "rtb-09f1f372e8dd94d92",
            "subnet_id": "subnet-04c2bc3c619807d11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21dbf07cff5f04b",
            "route_table_id": "rtb-09f1f372e8dd94d92",
            "subnet_id": "subnet-08f83f78066c4562e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:security-group/sg-0dbd6e2f79c648d85",
            "description": "Permite HTTPS desde subredes de app hacia VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Respuesta hacia las subredes de app",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbd6e2f79c648d85",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.11.0/24"
                ],
                "description": "HTTPS desde subredes privadas de app",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "reservas-dev-sg-endpoints",
            "name_prefix": "",
            "owner_id": "249954438132",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reservas-dev-sg-endpoints"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-sg-endpoints",
              "Project": "reservas"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:subnet/subnet-005c863812a570fae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005c863812a570fae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249954438132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "reservas-dev-app-us-east-1a",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-app-us-east-1a",
              "Project": "reservas",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:subnet/subnet-0755c6800a93baad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0755c6800a93baad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249954438132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "reservas-dev-app-us-east-1b",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-app-us-east-1b",
              "Project": "reservas",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:subnet/subnet-0c99710e920d4c6ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c99710e920d4c6ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249954438132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "reservas-dev-db-us-east-1a",
              "Tier": "private-db"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-db-us-east-1a",
              "Project": "reservas",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:subnet/subnet-0a29f7fabaeca505e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a29f7fabaeca505e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249954438132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "reservas-dev-db-us-east-1b",
              "Tier": "private-db"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-db-us-east-1b",
              "Project": "reservas",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:subnet/subnet-04c2bc3c619807d11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c2bc3c619807d11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249954438132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "reservas-dev-public-us-east-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-public-us-east-1a",
              "Project": "reservas",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:subnet/subnet-08f83f78066c4562e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f83f78066c4562e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249954438132",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "reservas-dev-public-us-east-1b",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-public-us-east-1b",
              "Project": "reservas",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc/vpc-0f617bde4cbd277c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007787c89d698cf58",
            "default_route_table_id": "rtb-0bf9c8c96ad578a4a",
            "default_security_group_id": "sg-028a129577fd4a220",
            "dhcp_options_id": "dopt-09b0a8caf15b5e381",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f617bde4cbd277c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf9c8c96ad578a4a",
            "owner_id": "249954438132",
            "tags": {
              "Name": "reservas-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-vpc",
              "Project": "reservas"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc-endpoint/vpce-07b4c7ff8606271b3",
            "dns_entry": [
              {
                "dns_name": "vpce-07b4c7ff8606271b3-qpbio35w.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07b4c7ff8606271b3-qpbio35w-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07b4c7ff8606271b3-qpbio35w-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08483342BN1HMB3GZ85M"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1043580UHYNGADE0ORZ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z1042635B7I7NSXCKQWK"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0848333CZILJMFM43N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07b4c7ff8606271b3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-003ecee2b38fdcd5b",
              "eni-063e2823eb1d89385"
            ],
            "owner_id": "249954438132",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbd6e2f79c648d85"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.90",
                "subnet_id": "subnet-005c863812a570fae"
              },
              {
                "ipv4": "10.0.11.195",
                "subnet_id": "subnet-0755c6800a93baad4"
              }
            ],
            "subnet_ids": [
              "subnet-005c863812a570fae",
              "subnet-0755c6800a93baad4"
            ],
            "tags": {
              "Name": "reservas-dev-endpoint-cwlogs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-endpoint-cwlogs",
              "Project": "reservas"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc-endpoint/vpce-04a828f632ac1f13a",
            "dns_entry": [
              {
                "dns_name": "vpce-04a828f632ac1f13a-56ffnixo.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a828f632ac1f13a-56ffnixo-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04a828f632ac1f13a-56ffnixo-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0848517T7N82O87DNYF"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z0111115UW2MY47CN58U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04a828f632ac1f13a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-056294a530d29ad92",
              "eni-058f54ce9326a04f5"
            ],
            "owner_id": "249954438132",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbd6e2f79c648d85"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.53",
                "subnet_id": "subnet-005c863812a570fae"
              },
              {
                "ipv4": "10.0.11.235",
                "subnet_id": "subnet-0755c6800a93baad4"
              }
            ],
            "subnet_ids": [
              "subnet-005c863812a570fae",
              "subnet-0755c6800a93baad4"
            ],
            "tags": {
              "Name": "reservas-dev-endpoint-ecr-api"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-endpoint-ecr-api",
              "Project": "reservas"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc-endpoint/vpce-042bed89a6c154deb",
            "dns_entry": [
              {
                "dns_name": "vpce-042bed89a6c154deb-b1ucdjn4.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-042bed89a6c154deb-b1ucdjn4-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-042bed89a6c154deb-b1ucdjn4-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z010032128Q0BUFWTHNCA"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z010032128Q0BUFWTHNCA"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z10207933B6S19BGSP62Q"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z10207933B6S19BGSP62Q"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-042bed89a6c154deb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06e152ed574a1e84c",
              "eni-08faa745d1a82c5c3"
            ],
            "owner_id": "249954438132",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbd6e2f79c648d85"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.157",
                "subnet_id": "subnet-005c863812a570fae"
              },
              {
                "ipv4": "10.0.11.167",
                "subnet_id": "subnet-0755c6800a93baad4"
              }
            ],
            "subnet_ids": [
              "subnet-005c863812a570fae",
              "subnet-0755c6800a93baad4"
            ],
            "tags": {
              "Name": "reservas-dev-endpoint-ecr-dkr"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-endpoint-ecr-dkr",
              "Project": "reservas"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc-endpoint/vpce-0ccde76e42c79846c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ccde76e42c79846c",
            "ip_address_type": "ipv4",
            "owner_id": "249954438132",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-037c1d5d2d37e606b"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "reservas-dev-endpoint-s3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-endpoint-s3",
              "Project": "reservas"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_app",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc-endpoint/vpce-01ada65569fcfdf49",
            "dns_entry": [
              {
                "dns_name": "vpce-01ada65569fcfdf49-ltm7g1uj.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01ada65569fcfdf49-ltm7g1uj-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01ada65569fcfdf49-ltm7g1uj-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z1043969PJF5UWA7TAW8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01ada65569fcfdf49",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03078db220aba356d",
              "eni-04272593f2ef6080e"
            ],
            "owner_id": "249954438132",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbd6e2f79c648d85"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.178",
                "subnet_id": "subnet-005c863812a570fae"
              },
              {
                "ipv4": "10.0.11.136",
                "subnet_id": "subnet-0755c6800a93baad4"
              }
            ],
            "subnet_ids": [
              "subnet-005c863812a570fae",
              "subnet-0755c6800a93baad4"
            ],
            "tags": {
              "Name": "reservas-dev-endpoint-secretsmanager"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-endpoint-secretsmanager",
              "Project": "reservas"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:249954438132:vpc-endpoint/vpce-03f44be6603936890",
            "dns_entry": [
              {
                "dns_name": "vpce-03f44be6603936890-tvpky62o.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03f44be6603936890-tvpky62o-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03f44be6603936890-tvpky62o-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10432383JTXKJKWOGBAQ"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z104272416V39U8AZSGZ3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03f44be6603936890",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-045659f0d021cdec9",
              "eni-062e18a4f2f2926a3"
            ],
            "owner_id": "249954438132",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbd6e2f79c648d85"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.112",
                "subnet_id": "subnet-005c863812a570fae"
              },
              {
                "ipv4": "10.0.11.155",
                "subnet_id": "subnet-0755c6800a93baad4"
              }
            ],
            "subnet_ids": [
              "subnet-005c863812a570fae",
              "subnet-0755c6800a93baad4"
            ],
            "tags": {
              "Name": "reservas-dev-endpoint-ssm"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "reservas-dev-endpoint-ssm",
              "Project": "reservas"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f617bde4cbd277c4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.vpc_endpoints",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}